fix: :bug: duplicated mapping key in swagger
